fixed horizontal scrollbar

--- a/css/my-first-bitcoin-pizza.css
+++ b/css/my-first-bitcoin-pizza.css
@@ -281,7 +281,8 @@ p {
 .wrapper {
   position: static;
   display: block;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   width: 100%;
   height: 100%;
   max-height: 100vh;
